--- a/package.json
+++ b/package.json
@@ -1,47 +1,51 @@
 {
-  "name": "@ranbo/bond",
-  "version": "1.0.8",
-  "main": "dist/index.js",
-  "scripts": {
-    "watch": "tsc --watch ./src/index.ts",
-    "start": "tsc && node ./dist/index.js",
-    "build": "rollup --config --environment NODE_ENV:development",
-    "release": "rollup --config --environment NODE_ENV:production"
-  },
-  "bin": {
-    "bond": "./bin/index.js"
-  },
-  "author": "likai",
-  "license": "ISC",
-  "description": "",
-  "files": [
-    "bin/index.js",
-    "dist/index.js",
-    "docs/*"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "fs-extra": "^11.1.1",
-    "iconv-lite": "^0.6.3",
-    "node-fetch": "^2.6.9",
-    "openapi-typescript-codegen": "^0.23.0",
-    "prettier": "^2.8.8"
-  },
-  "devDependencies": {
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "@types/fs-extra": "^11.0.1",
-    "@types/node": "^18.15.10",
-    "@types/node-fetch": "^2.6.2",
-    "@types/prettier": "^2.7.3",
-    "nodemon": "^2.0.21",
-    "rollup-plugin-terser": "^7.0.2",
-    "ts-morph": "^19.0.0",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
-  }
+	"version": "1.0.10",
+	"name": "@ranbo/generator",
+	"main": "dist/lib/index.js",
+	"module": "dist/module/index.js",
+	"scripts": {
+		"watch": "tsc --watch ./src/index.ts",
+		"start": "yarn build && node ./src/run.js",
+		"build": "rollup --config --environment NODE_ENV:development",
+		"release": "rollup --config --environment NODE_ENV:production"
+	},
+	"bin": {
+		"generate": "./bin/index.js"
+	},
+	"author": "likai",
+	"license": "ISC",
+	"description": "",
+	"files": [
+		"bin/index.js",
+		"dist/index.js",
+		"docs/*"
+	],
+	"publishConfig": {
+		"access": "public"
+	},
+	"dependencies": {
+		"chalk": "4.1.2",
+		"dotenv": "^16.0.3",
+		"fs-extra": "^11.1.1",
+		"iconv-lite": "^0.6.3",
+		"node-fetch": "^2.6.9",
+		"openapi-typescript-codegen": "^0.23.0",
+		"prettier": "^2.8.8",
+		"ts-morph": "^19.0.0"
+	},
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^25.0.2",
+		"@rollup/plugin-json": "^6.0.0",
+		"@rollup/plugin-node-resolve": "^15.0.1",
+		"@rollup/plugin-typescript": "^11.0.0",
+		"@types/fs-extra": "^11.0.1",
+		"@types/node": "^18.15.10",
+		"@types/node-fetch": "^2.6.2",
+		"@types/prettier": "^2.7.3",
+		"nodemon": "^2.0.21",
+		"rollup-plugin-terser": "^7.0.2",
+		"ts-node": "^10.9.1",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5"
+	}
 }
